# DreamGarage

./: .gitattributes  .gitignore  CMakeLists.txt  DreamBatchTester.bat  DreamGarage.cpp  DreamGarage.h  DreamOS_Debug.lnk  DreamOS_Release.lnk  DreamTestApp.cpp  DreamTestApp.h  DreamUIBar.cpp  DreamUIBar.h  Jenkinsfile  README.md  UIBar.cpp  UIBar.h  UIMenuItem.cpp  UIMenuItem.h  UIMenuItemSubscriber.cpp  UIMenuItemSubscriber.h  UIMenuLayer.cpp  UIMenuLayer.h  UIModule.cpp  UIModule.h  UITestSuite.cpp  UITestSuite.h  cefaudiobuffer_3359.patch  cefaudiobuffer_3359_bkup.patch  cefaudiobuffer_3538.patch  cefaudiobuffer_3538_.patch  cefaudiobuffer_3538_old.patch  chromiumdreamcambkup_.patch  dreamcam_3538.patch  dreampaths.txt  meson.build  tatus
DreamOS/: .gitignore  CMakeLists.txt  DreamApp.cpp  DreamApp.h  DreamApp.tpp  DreamAppHandle.h  DreamAppManager.cpp  DreamAppManager.h  DreamAppMessage.cpp  DreamAppMessage.h  DreamBrowserMessage.cpp  DreamBrowserMessage.h  DreamMessage.h  DreamModule.cpp  DreamModule.h  DreamModuleManager.cpp  DreamModuleManager.h  DreamOS.cpp  DreamOS.h  DreamOS.tpp  DreamOSMain.cpp  DreamOSMain.h  DreamOSTestSuite.cpp  DreamOSTestSuite.h  DreamOSWinMain.cpp  DreamOSWinMain.h  DreamPeer.cpp  DreamPeer.h  DreamPeerApp.cpp  DreamPeerApp.h  DreamShareViewMessage.cpp  DreamShareViewMessage.h  DreamShareViewPointerMessage.cpp  DreamShareViewPointerMessage.h  DreamShareViewShareMessage.cpp  DreamShareViewShareMessage.h  DreamTestingApp.cpp  DreamTestingApp.h  DreamUpdatePointerMessage.cpp  DreamUpdatePointerMessage.h  (+19 more)
DreamOS/CEFCache/: Cookies  DevToolsActivePort  LOG  LOG.old  Visited Links
DreamOS/Cloud/: CEFApp.h  CEFHandler.cpp  CEFHandler.h  CEFImp.h  CEFURLRequestController.h  CloudController.cpp  CloudController.h  CloudControllerFactory.cpp  CloudControllerFactory.h  CloudImp.h  CloudMessage.cpp  CloudMessage.h  CloudModel.h  CloudResponse.h  CloudTestSuite.cpp  CloudTestSuite.h  Controller.cpp  Controller.h  ControllerProxy.h  Model.h  WebRequest.cpp  WebRequest.h  WebRequestPostData.cpp  WebRequestPostData.h  WebRequestPostDataElement.cpp  WebRequestPostDataElement.h
DreamOS/Core/: Utilities.cpp  Utilities.h  config.h
DreamOS/DreamConsole/: CmdPrompt.cpp  CmdPrompt.h  Console.cpp  Console.h  DebugConsole.cpp  DebugConsole.h  DreamConsole.h  ProfilerGraph.h
DreamOS/DreamControlView/: DreamControlView.cpp  DreamControlView.h  UIControlBar.cpp  UIControlBar.h  UIControlView.cpp  UIControlView.h
DreamOS/DreamGarage/: AudioDataMessage.h  Dream2DMouseApp.cpp  Dream2DMouseApp.h  DreamBrowser.cpp  DreamBrowser.h  DreamClientMain.cpp  DreamClientMain.h  DreamContentView.cpp  DreamContentView.h  DreamControlBar.cpp  DreamControlBar.h  DreamControlView.cpp  DreamControlView.h  DreamEnvironment.cpp  DreamEnvironment.h  DreamEnvironmentApp.cpp  DreamEnvironmentApp.h  DreamFormApp.cpp  DreamFormApp.h  DreamGamePadApp.cpp  DreamGamePadApp.h  DreamGamepadCameraApp.cpp  DreamGamepadCameraApp.h  DreamGarage.cpp  DreamGarage.h  DreamGarageMessage.h  DreamLoginApp.cpp  DreamLoginApp.h  DreamSettingsApp.cpp  DreamSettingsApp.h  DreamSoundSystem.cpp  DreamSoundSystem.h  DreamTabView.cpp  DreamTabView.h  DreamUIBar.cpp  DreamUIBar.h  UICommon.h  UIContentControlBar.cpp  UIContentControlBar.h  UITabView.cpp  (+6 more)
DreamOS/DreamLogger/: DreamLogger.cpp  DreamLogger.h
DreamOS/DreamShareView/: DreamShareView.cpp  DreamShareView.h  MultiContentTestSuite.cpp  MultiContentTestSuite.h
DreamOS/DreamUserControlArea/: DreamContent.h  DreamContentSource.h  DreamUserControlArea.cpp  DreamUserControlArea.h
DreamOS/GPUCache/: data_0  data_1  f_000001  index
DreamOS/HAL/: EnvironmentProgram.h  FlatProgram.h  FogProgram.h  HAL.h  HALImp.cpp  HALImp.h  HALTestSuite.cpp  HALTestSuite.h  Shader.h  SkyboxScatterProgram.h  UIStageProgram.h
DreamOS/HMD/: HMD.cpp  HMD.h  HMDFactory.cpp  HMDFactory.h  HMDSinkNode.h  HMDSourceNode.h
DreamOS/InteractionEngine/: ActiveObject.cpp  ActiveObject.h  ActiveObjectQueue.cpp  ActiveObjectQueue.h  AnimationCurve.cpp  AnimationCurve.h  AnimationItem.cpp  AnimationItem.h  AnimationQueue.cpp  AnimationQueue.h  AnimationState.cpp  AnimationState.h  AnimationTestSuite.cpp  AnimationTestSuite.h  InteractionEngine.cpp  InteractionEngine.h  InteractionEngineTestSuite.cpp  InteractionEngineTestSuite.h  InteractionObjectEvent.cpp  InteractionObjectEvent.h
DreamOS/Logger/: Logger.cpp  Logger.h
DreamOS/Models/: .car.obj.swp  chainsaw_free.mtl  cloudTest.FBX  mouth.FBX  mouth.max  riverTest.FBX
DreamOS/Modules/: DreamObjectModule.cpp  DreamObjectModule.h  TimeManagerModule.cpp  TimeManagerModule.h
DreamOS/OSX/: OSXApp.mm  OSXAppDelegate.h  OSXAppDelegate.mm
DreamOS/PhysicsEngine/: AirResistanceGenerator.cpp  AirResistanceGenerator.h  CollisionDetector.cpp  CollisionDetector.h  CollisionManifold.cpp  CollisionManifold.h  CollisionResolver.cpp  CollisionResolver.h  CollisionTestSuite.cpp  CollisionTestSuite.h  ContactPoint.cpp  ContactPoint.h  ForceGenerator.h  ForceGeneratorFactory.cpp  ForceGeneratorFactory.h  GravityGenerator.cpp  GravityGenerator.h  Integrator.cpp  Integrator.h  InteractionEngine.cpp  InteractionEngine.h  InteractionEngineTestSuite.cpp  InteractionEngineTestSuite.h  PhysicsEngine.cpp  PhysicsEngine.h  PhysicsEngineTestSuite.cpp  PhysicsEngineTestSuite.h  PhysicsIntegrator.cpp  PhysicsIntegrator.h  Simplex.cpp  Simplex.h
DreamOS/Primitives/: AABV.h  BiasMatrix.h  BoundingBox.cpp  BoundingBox.h  BoundingPlane.cpp  BoundingPlane.h  BoundingQuad.cpp  BoundingQuad.h  BoundingSphere.cpp  BoundingSphere.h  BoundingVolume.cpp  BoundingVolume.h  CapturedObj.cpp  CapturedObj.h  CircularBuffer.h  DObject.h  DimObj.cpp  DimObj.h  DimPlane.cpp  DimPlane.h  DimRay.cpp  DimRay.h  DimensionTestSuite.cpp  DimensionTestSuite.h  FlatContext.cpp  FlatContext.h  FogParams.cpp  FogParams.h  Framebuffer.cpp  Framebuffer.h  HysteresisCylinder.cpp  HysteresisCylinder.h  HysteresisObj.cpp  HysteresisObj.h  HysteresisObject.cpp  HysteresisObject.h  HysteresisPlane.cpp  HysteresisPlane.h  HysteresisQuad.cpp  (+92 more)
src/: CMakeLists.txt  meson.build
(+2341 files in other folders)
