cmake_minimum_required(VERSION 3.3)
project(DreamOS)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    Core/Types/Factory.h
    Core/Types/Object.h
    Core/config.h
    Dimension/Primitives/AABV.h
    Dimension/Primitives/DimObj.h
    Dimension/Primitives/matrix.h
    Dimension/Primitives/point.h
    Dimension/Primitives/vector.h
    HAL/opengl/OGLFragmentShader.cpp
    HAL/opengl/OGLFragmentShader.h
    HAL/opengl/OGLObj.h
    HAL/opengl/OGLQuad.h
    HAL/opengl/OGLTriangle.h
    HAL/opengl/OGLVertexShader.cpp
    HAL/opengl/OGLVertexShader.h
    HAL/opengl/OGLVolume.h
    HAL/opengl/opengl.h
    HAL/opengl/OpenGLImp.cpp
    HAL/opengl/OpenGLImp.h
    HAL/opengl/OpenGLShader.cpp
    HAL/opengl/OpenGLShader.h
    HAL/HAL.h
    HAL/HALImp.h
    HAL/Shader.h
    Primitives/Types/Number.h
    Primitives/Types/TypeObj.h
    Primitives/Types/Types.h
    Primitives/Types/TypesTests.cpp
    Primitives/Types/TypesTests.h
    Primitives/Types/UID.cpp
    Primitives/Types/UID.h
    Primitives/AABV.h
    Primitives/camera.h
    Primitives/color.h
    Primitives/DimObj.h
    Primitives/matrix.h
    Primitives/point.cpp
    Primitives/point.h
    Primitives/ProjectionMatrix.cpp
    Primitives/ProjectionMatrix.h
    Primitives/Publisher.h
    Primitives/quad.h
    Primitives/RotationMatrix.h
    Primitives/ScalingMatrix.h
    Primitives/Subscriber.h
    Primitives/texture.h
    Primitives/TranslationMatrix.h
    Primitives/Triangle.h
    Primitives/TriangleIndexGroup.h
    Primitives/valid.h
    Primitives/vector.h
    Primitives/Vertex.h
    Primitives/ViewMatrix.h
    Primitives/VirtualObj.h
    Primitives/volume.h
    Project/Windows/DreamOS/DreamOS.sdf
    Project/Windows/DreamOS/DreamOS.sln
    Project/Windows/DreamOS/DreamOS.vcxproj
    Project/Windows/DreamOS/DreamOS.vcxproj.filters
    Project/Windows/DreamOS/DreamOS.vcxproj.user
    RESULT/EHM.h
    RESULT/RESULT.h
    RESULT/STDTYPES.h
    Sandbox/OSX/OSXApp.h
    Sandbox/OSX/OSXAppDelegate.h
    Sandbox/OSX/OSXOpenGLView.h
    Sandbox/Windows/Win64Keyboard.cpp
    Sandbox/Windows/Win64Keyboard.h
    Sandbox/Windows/Win64Mouse.cpp
    Sandbox/Windows/Win64Mouse.h
    Sandbox/Windows/Win64PathManager.cpp
    Sandbox/Windows/Win64PathManager.h
    Sandbox/Windows/Windows64App.cpp
    Sandbox/Windows/Windows64App.h
    Sandbox/PathManager.cpp
    Sandbox/PathManager.h
    Sandbox/PathManagerFactory.cpp
    Sandbox/PathManagerFactory.h
    Sandbox/SandboxApp.h
    Sandbox/SandboxFactory.cpp
    Sandbox/SandboxFactory.h
    Sense/SenseDevice.h
    Sense/SenseKeyboard.h
    Sense/SenseMouse.h
    Test/TestObject.h
    DreamOSMain.cpp
    DreamOSMain.h
)

add_executable(DreamOS ${SOURCE_FILES})