# src/CMakeList.txt : CMake project for DOS root source directory

# add_subdirectory(apps)
# add_subdirectory(client)
add_subdirectory(cloud)
add_subdirectory(core)
# add_subdirectory(dreamcef)
# add_subdirectory(dreamdesktop)
# add_subdirectory(garage)
# add_subdirectory(hal)
# add_subdirectory(hmd)
# add_subdirectory(logger)
# add_subdirectory(modules)
add_subdirectory(os)
add_subdirectory(pipeline)
add_subdirectory(sandbox)
# add_subdirectory(scene)
# add_subdirectory(sense)
# add_subdirectory(sound)
# add_subdirectory(test)
# add_subdirectory(testclient)
# # add_subdirectory(third_party)
# add_subdirectory(ui)
# add_subdirectory(webbrowser)