# Top level source directory for Dream

subdir('app')
subdir('client')
subdir('cloud')
subdir('core')
subdir('dreamcef')
subdir('dreamdesktop')
subdir('garage')
subdir('hal')
subdir('hmd')
subdir('logger')
subdir('module')
# subdir('os')
# subdir('pipeline')
# subdir('sandbox')
# subdir('scene')
# subdir('sense')
# subdir('sound')
# subdir('test')
# subdir('testclient')
# subdir('third_party')
# subdir('ui')
# subdir('webbrowser')
