# Dream Apps

sources = [
	'DreamApp.h',
	'DreamApp.cpp',
	'DreamApp.tpp',
	'DreamAppHandle.h',
	'DreamAppHandle.cpp',
	'DreamAppManager.h',
	'DreamAppManager.cpp',
	'DreamAppMessage.h',
	'DreamAppMessage.cpp'
]

dreamapp = shared_module('dream_app', [sources])

subdir('Dream2DMouseApp')
subdir('DreamBrowserApp')
subdir('DreamContentViewApp')
subdir('DreamDesktopDuplicationApp')
subdir('DreamEnvironmentApp')
subdir('DreamFormApp')
subdir('DreamGamepadCameraApp')
subdir('DreamLoginApp')
subdir('DreamPeerApp')
subdir('DreamSettingsApp')
subdir('DreamShareViewApp')
subdir('DreamTestingApp')
subdir('DreamUIBarApp')
subdir('DreamUserApp')
subdir('DreamUserControlAreaApp')
subdir('DreamVCamApp')