# Dream CEF Project

sources = [
	'main.cpp',
	'CEFExtension.h',
	'CEFExtension.cpp',
	'CEFV8Handler.h',
	'CEFV8Handler.cpp',
	'DreamCEFApp.h',
	'DreamCEFApp.cpp'
]

# TODO: 
# [ ] Add JS code
# [ ] Add actual CEF / Chromium integration etc
# [ ] Add patching system for CEF / Chromium as needed

dreamcef = executible('dreamcef', sources)

