# Dream Desktop Duplication

sources = [
	'CommonTypes.h',
	'DDCIPCMessage.h',
	'DesktopDuplication.h',
	'DesktopDuplication.cpp',
	'D3D11DesktopDuplicationDisplayManager.h',
	'D3D11DesktopDuplicationDisplayManager.cpp',
	'D3D11DesktopDuplicationManager.h',
	'D3D11DesktopDuplicationManager.cpp',
	'D3D11DesktopDuplicationOutputManager.h',
	'D3D11DesktopDuplicationOutputManager.cpp',
	'D3D11DesktopDuplicationThreadManager.h',
	'D3D11DesktopDuplicationThreadManager.cpp'
]

# TODO: Add these?
# PixelShader.hlsl
# VertexShader.hlsl

dreamdesktop = executable('dreamdesktop', sources)