# HAL - Hardware Abstraction Library

subdir('opengl')

sources = [
	'EnvironmentProgram.h',
	'HAL.h',
	'HALImp.h',
	'HALImp.cpp',
	'FlatProgram.h',
	'FogParams.h',
	'FogParams.cpp',
	'FogProgram.h',
	'Shader.h',
	'SkyboxScatterProgram.h',
	'UIStageProgram.h',
]

hal = static_library('hal', sources)